--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This a sample Rails 2.3.16 project.
+This a sample Rails 2.3.16 project created for this Capybara Webkit issue: https://github.com/thoughtbot/capybara-webkit/issues/486
 
 Running the spec suite with Capybara Webkit enabled will produce the following error:
 
