--- a/README
+++ b/README
@@ -24,3 +24,7 @@ The error occurred while evaluating nil.[]
 /Users/carlos/work/planetargon/sandbox/capybarawebkit_test/vendor/ruby/1.8/gems/capybara-2.0.2/lib/capybara/dsl.rb:46:in `page'
 /Users/carlos/work/planetargon/sandbox/capybarawebkit_test/vendor/ruby/1.8/gems/capybara-2.0.2/lib/capybara/dsl.rb:51:in `visit'
 /Users/carlos/work/planetargon/sandbox/capybarawebkit_test/spec/acceptance/application_spec.rb:6:
+
+This happens because Capybara Webkit requires a version of Capybara that requires version of Ruby greater than 1.8.
+
+Downgrading to Capybara 1.1.4 and 0.12.1 fixes this.
